--- a/docker/nginx_config_files/nginx.dev.conf
+++ b/docker/nginx_config_files/nginx.dev.conf
@@ -3,14 +3,31 @@ events {}
 http {
     server {
         listen 80;
-        server_name localhost;
+        server_name facul.subarashii.com.br;
+    
+        # Redirect HTTP to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name facul.subarashii.com.br;
+
+        ssl_certificate /etc/letsencrypt/live/facul.subarashii.com.br/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/facul.subarashii.com.br/privkey.pem;
+
+        # Include recommended SSL settings (optional but recommended)
+        # include /etc/letsencrypt/options-ssl-nginx.conf; 
+        # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; 
 
         location /static/ {
             alias /app/static/;
         }
 
         location / {
-            proxy_pass http://service_django_dev:8000;
+            proxy_pass http://bot_zap_django_production:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
